# gaggle

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  extension_config.cmake  pyproject.toml  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: dist_pipeline.yml  lints.yml  tests.yml
docs/: API.md  BUGFIXES.md  BUG_ANALYSIS_AND_FIXES.md  BUG_FIXES_AND_IMPROVEMENTS.md  CACHE_LIMIT_IMPLEMENTATION.md  CHECKLIST.md  CODE_ANALYSIS_SUMMARY.md  CONFIGURATION.md  DOCUMENTATION_UPDATE.md  DOCUMENTATION_UPDATE_VERSIONING.md  ERROR_CODES.md  GAGGLE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_NEXT_FEATURES.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  QUICKSTART.md  README.md  RENAME_SUMMARY.md  SUMMARY.md  TEST_ANALYSIS.md  VERSIONING_ANALYSIS.md  VERSIONING_IMPLEMENTATION.md  VERSIONING_SUMMARY.md  VERSION_PINNING_COMPLETE.md  VERSION_PINNING_IMPLEMENTATION.md  WHAT_NEXT.md  verify_rename.sh
docs/examples/: README.md  e1_core_functionality.sql  e2_advanced_features.sql  e3_integration_and_errors.sql  e3_versioning.sql  e4_extra_examples.sql  gaggle_usage.sql
gaggle/: Cargo.toml  cbindgen.toml
gaggle/bindings/: gaggle_extension.cpp  gaggle_extension_old.cpp
gaggle/bindings/include/: gaggle_extension.hpp  rust.h
gaggle/src/: config.rs  error.rs  ffi.rs  kaggle.rs  lib.rs  utils.rs
gaggle/src/kaggle/: api.rs  credentials.rs  download.rs  metadata.rs  mod.rs  search.rs
gaggle/tests/: integration_mock.rs  mock_http.rs  offline_mode.rs  property_parse_dataset_path.rs  replacement_scan.rs  replacement_scan_excel.rs  test_error_recovery.rs  test_regression.rs  test_security.rs
test/: README.md
test/sql/: README.md  (+4 more)
(+1 files in other folders)
