[package]
name = "gaggle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gaggle"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
duckdb_extension = []
default = []

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json", "multipart"], default-features = false }
zip = "6.0"
dirs = "6.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.7.0"
tiny_http = "0.12.0"
serial_test = "3.0"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
